--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
   "bugs": {
     "url": "https://github.com/DarkwinngDuck/textRuIntModule/issues"
   },
-  "homepage": "https://github.com/DarkwinngDuck/textRuIntModule#readme"
+  "homepage": "https://github.com/DarkwinngDuck/textRuIntModule#readme",
+  "devDependencies": {
+    "eslint": "^5.13.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.16.0"
+  }
 }
