Revert "Config manager"

--- a/package.json
+++ b/package.json
@@ -4,13 +4,7 @@
   "description": "simple implementation of text.ru integration module",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
-  },
-  "jest": {
-    "collectCoverage": true,
-    "coverageReporters": [
-      "text"
-    ]
+    "test": "test"
   },
   "repository": {
     "type": "git",
@@ -27,14 +21,8 @@
   },
   "homepage": "https://github.com/DarkwinngDuck/textRuIntModule#readme",
   "devDependencies": {
-    "eslint": "5.13.0",
-    "eslint-config-airbnb-base": "13.1.0",
-    "eslint-plugin-import": "2.16.0",
-    "eslint-plugin-jest": "22.2.2",
-    "jest": "24.0.0"
-  },
-  "dependencies": {
-    "request": "2.88.0",
-    "request-promise-native": "1.0.5"
+    "eslint": "^5.13.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.16.0"
   }
 }
